--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -55,7 +55,7 @@
            <img id="planpic4" class="rotating-item Q-pol" src="images/ireland/p4.jpg"/>
            <img id="planpic5" class="rotating-item Q-pol" src="images/ireland/p5.jpg"/>
           </div>
-      </div>
+        </div>
 
       <div id="reviewspecs" class"reviewowner">
         <h3>Credits & Fees</h3>
@@ -70,34 +70,38 @@
             <td class="orangemoney largetext">Non Continental Fee</td>
             <td class="orangemoney largetext">$275 =</td>
             <td></td>
-            <td><a href="#"><img id="star2" class="starpowa" src="/images/emptystar.jpg"></a></td>
+            <td><img id="star2" class="starpowa" src="/images/emptystar.jpg"></td>
           </tr>
           <tr>
             <td class="orangemoney largetext">2-Bedroom Upgrade</td>
             <td class="orangemoney largetext">$189 =</td>
             <td></td>
-            <td><a href="#"><img id="star3" class="starpowa" src="/images/emptystar.jpg"></a></td>
+            <td><img id="star3" class="starpowa" src="/images/emptystar.jpg"></td>
           </tr>
           <tr>
             <td class="orangemoney largetext">3-Bedroom Upgrade</td>
             <td class="orangemoney largetext">$378 =</td>
-            <td><a id="star4" href="#"><img class="starpowa" src="/images/emptystar.jpg"></a></td>
-            <td><a id="star5" href="#"><img class="starpowa" src="/images/emptystar.jpg"></a></td>
+            <td><img id="star4" class="starpowa" src="/images/emptystar.jpg"></td>
+            <td><img id="star5" class="starpowa" src="/images/emptystar.jpg"></td>
           </tr>
           <tr>
             <td class="orangemoney largetext">Peak Season Upgrade</td>
             <td class="orangemoney largetext">$275 =</td>
             <td></td>
-            <td><a id="star6" href="#"><img class="starpowa" src="/images/emptystar.jpg"></a></td>
-            <div id="startotals"></div>
-            <div id="startotal1"></div>
-            <div id="startotal2"></div>
+            <td><img id="star6" class="starpowa" src="/images/emptystar.jpg"></td>
+            <div id="startotals">$189 + 1 Star</div>
           </tr>
-          <!-- <tr>
-            <td><img style="width = 100%;" src="/images/line.jpg"></td>
-          </tr> -->
         </table>
-
+        <div style="width: 100%;">
+          <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+        </div>
+        <div id="startotals" class="orangemoney largetext"></div>
+    </div>
+      <div id="reviewbook">
+        <div class="bookington">
+          <img class="bookimage" src="/images/baggage.jpg"></img>
+          <h4>Book Vacation!</h4>
+        </div>
       </div>
 
     </div>
