--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -17,7 +17,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    overflow: auto;
+    overflow: hidden;
   }
 
   #lnkHomeIcon {
@@ -143,6 +143,20 @@
     padding: 15px;
   }
 
+  #reviewbook {
+    opacity: 0.8;
+    background-color: #cccccc;
+    border: 1px #000000 solid;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 20px 20px 20px 20px;
+    width: 22%;
+    height: 400px;
+    float: left;
+    padding: 15px;
+    position: relative;
+  }
+
   #reviewspecs {
     opacity: 0.8;
     background-color: #ffffff;
@@ -150,10 +164,11 @@
     border-radius: 10px;
     padding: 10px;
     margin: 20px 0px 20px 0px;
-    width: 40%;
+    width: 37%;
     height: 400px;
     float: left;
     padding: 15px;
+    position: relative;
   }
 
   #reviewright {
@@ -195,6 +210,36 @@
         -ms-transition: opacity 2s ease-in;
          -o-transition: opacity 2s ease-in;
             transition: opacity 2s ease-in;
+  }
+
+  #startotals {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    color: #ee7600;
+    font-size: 35px;
+    font-weight: bold;
+    text-align: right;
+    margin: 5px;
+  }
+
+  .bookington {
+    height: 180px;
+    border: 3px solid #eeaa77;
+    border-radius: 15px;
+    float: bottom;
+    background-color: #FFFF88;
+    padding: 20px;
+    margin-top: 150px;
+    margin-bottom: auto;
+    text-align: center;
+  }
+
+  .bookimage {
+    height: 125px;
+    width: 155px;
+    border-radius: 15px;
   }
 
   .ownermoney {
@@ -268,7 +313,7 @@
     /*float: bottom;*/
     position: relative;
     height: 250px;
-    width: 350px;
+    width: 450px;
     border-radius: 175px;
     -webkit-border-radius: 175px;
     -moz-border-radius: 175px;
@@ -315,6 +360,10 @@
     -o-transition: all 1s ease;
     -ms-transition: all 1s ease;
     transition: all 1s ease;
+  }
+
+  .thumbpic:hover {
+    margin-right: 20px;
   }
 
   .surveykeys {
