--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -19,7 +19,7 @@
       </div>
 
       <div class="homelink">
-        <a href="/About"><img class="subpic darken shadow spin" src="/images/london-small.jpg"></a>
+        <a href="/ExpressWays"><img class="subpic darken shadow spin" src="/images/london-small.jpg"></a>
         <div class="hiddentext">Expressway Weeks</div>
       </div>
     </div>
