--- a/assets/styles/ken-burns-effect.css.less
+++ b/assets/styles/ken-burns-effect.css.less
@@ -115,7 +115,7 @@ figure {
 
 .pic-1 {
   opacity: 1;
-  background: url(/images/hammock.jpg) no-repeat center center;
+  background: url(/images/backgrounds/bg1.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -127,7 +127,7 @@ figure {
   -o-animation-delay: 6s;
   -moz--animation-delay: 6s;
   -webkit-animation-delay: 6s;
-  background: url(/images/dominicanbeach.jpeg) no-repeat center center;
+  background: url(/images/backgrounds/bg2.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -139,7 +139,7 @@ figure {
   -o-animation-delay: 12s;
   -moz--animation-delay: 12s;
   -webkit-animation-delay: 12s;
-  background: url(/images/paris.jpg) no-repeat center center;
+  background: url(/images/backgrounds/bg3.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -151,7 +151,7 @@ figure {
   -o-animation-delay: 18s;
   -moz--animation-delay: 18s;
   -webkit-animation-delay: 18s;
-  background: url(/images/venice.jpg) no-repeat center center;
+  background: url(/images/backgrounds/bg4.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -163,12 +163,49 @@ figure {
   -o-animation-delay: 24s;
   -moz--animation-delay: 24s;
   -webkit-animation-delay: 24s;
-  background: url(/images/rio.jpg) no-repeat center center;
+  background: url(/images/backgrounds/bg5.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
+.pic-6 {
+  animation-delay: 30s;
+  -o-animation-delay: 30s;
+  -moz--animation-delay: 30s;
+  -webkit-animation-delay: 30s;
+  background: url(/images/backgrounds/bg6.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.pic-7 {
+  animation-delay: 36s;
+  -o-animation-delay: 36s;
+  -moz--animation-delay: 36s;
+  -webkit-animation-delay: 36s;
+  background: url(/images/backgrounds/bg7.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.pic-8 {
+  animation-delay: 42s;
+  -o-animation-delay: 42s;
+  -moz--animation-delay: 42s;
+  -webkit-animation-delay: 42s;
+  background: url(/images/backgrounds/bg8.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .pic-i1 {
   opacity: 1;
   background: url(/images/ireland1.jpg) no-repeat center center;
