--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -55,6 +55,9 @@
   		  <figure class="pic-3"></figure>
   		  <figure class="pic-4"></figure>
         <figure class="pic-5"></figure>
+        <figure class="pic-6"></figure>
+  		  <figure class="pic-7"></figure>
+        <figure class="pic-8"></figure>
   		</div>
     </div>
 
