--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -40,6 +40,8 @@
   #divWelcomeText {
       width: 100%;
       height: 100%;
+      color: #FFFFFF;
+      opacity: 0.7;
   }
 
   .ceneter-text {
