--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -6,6 +6,7 @@
     padding: 15px 20px 15px 20px;
     float:left;
     text-align: center;
+    opacity: 0.7;
   }
 
   .center-frame {
@@ -25,12 +26,14 @@
     position: absolute;
     top: 0px;
     left: 0px;
+    opacity: 0.7;
   }
 
   #divHomeLinks {
     display: inline-block !important;
     margin: auto;
     position: absolute;
+    width: auto;
     left:0;
     right: 0;
     top: 0;
