new locations, finalized express page, fixed star mapping

--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -92,6 +92,7 @@
     font-weight: bold;
     color: #000000;
     font-family: Verdana, Geneva, serif;
+    text-shadow: 1px 1px #ffffff;
   }
 
   h5 {
@@ -99,6 +100,22 @@
     font-weight: bold;
     color: #000000;
     font-family: Verdana, Geneva, serif;
+  }
+
+  h6 {
+    font-size: 40px;
+    font-weight: bold;
+    color: #000000;
+    font-family: Verdana, Geneva, serif;
+    text-shadow: 2px 2px #ffffff;
+  }
+
+  .dolladay {
+    font-size: 35px;
+    font-weight: bold;
+    color: #064F40;
+    font-family: Verdana, Geneva, serif;
+    text-shadow: 2px 2px #ffffff;
   }
 
   .expbig {
@@ -142,6 +159,38 @@
     border-radius: 50px;
   }
 
+  .starremaining {
+    float: left;
+  }
+
+  .starright {
+    float: right;
+  }
+
+  #reviewcongrats {
+    //opacity: 0;
+    text-align: center;
+    -webkit-transition-delay: 2s; /* Safari */
+    transition-delay: 2s;
+    -webkit-transition: opacity 2s ease-in;
+       -moz-transition: opacity 2s ease-in;
+        -ms-transition: opacity 2s ease-in;
+         -o-transition: opacity 2s ease-in;
+            transition: opacity 2s ease-in;
+  }
+
+  #starloc {
+    height: 50px;
+    border: 4px #0088bb solid;
+    border-radius: 10px;
+    width: 650px;
+    background-color: #ffffff;
+    margin-left: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: auto;
+  }
+
   #reviewleft {
     opacity: 0.8;
     background-color: #0F315D;
@@ -181,7 +230,7 @@
     position: relative;
   }
 
-  #reviewexpress {
+  #reviewexpressa {
     opacity: 0.8;
     background-color: #FFFF88;
     border: 1px #eeaa77 solid;
@@ -193,6 +242,36 @@
     float: left;
     padding: 15px;
     position: relative;
+  }
+
+  #reviewexpressb {
+    opacity: 0.8;
+    background-color: #FFFF88;
+    border: 1px #eeaa77 solid;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 60px 10px 20px 10px;
+    width: 30%;
+    height: 300px;
+    float: left;
+    padding: 15px;
+    position: relative;
+  }
+
+  #booknew {
+    font-size: 25px;
+    height: 125px;
+    width: 250px;
+    color: #ffffff;
+    font-family: Verdana, Geneva, serif;
+    background-color: #008080;
+    border: 4px #064F40 solid;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    font-weight: bold;
+    padding: 10px;
   }
 
   #reviewspecs {
@@ -263,7 +342,7 @@
   }
 
   .expressheight {
-    height: 50px;
+    height: 55px;
   }
 
   .bookington {
