--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -2,7 +2,7 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
     <h1>Star Credits</h1>
-    <table id="destinationchoice">
+    <table id="destinationchoice" class="planning">
       <tr>
         <td class="tilt">
             <img class="planlink shadow" src="/images/polaroidireland.jpg">
