--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -1,7 +1,20 @@
 <div class="homepage">
 <div class="center-frame">
   <div class="semi-transparent-background"></div>
+
   <h1>ExpressWay Weeks</h1>
+  <div id="starloc">
+    <div class="starremaining"><h3>Stars Remaining </h3></div>
+    <div class="starright">
+      <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
+      <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
+      <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
+      <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
+      <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
+      <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
+    </div>
+  </div>
+
   <table id="destinationchoice" class="express">
     <tr>
       <td class="tilt">
@@ -22,8 +35,8 @@
         <div>
           <div class="sixth">
             <div>
-              <a id="PR" href="#"><img class="expresspic darken" src="/images/pr1.jpg"></a>
-              <div class="expbig flotbot italic">Puerto Rico</div>
+              <a id="Orlando" href="#"><img class="expresspic darken" src="/images/orlando1.jpg"></a>
+              <div class="expbig flotbot italic">Orlando</div>
             </div>
         <div class="expressright">
           <div class="expbig">7 Days</div><br>
@@ -52,8 +65,8 @@
       <td class="tilt">
         <div class="sixth">
           <div>
-            <a id="Tokyo" href="#"><img class="expresspic darken" src="/images/tokyo1.jpg"></a>
-            <div class="expbig flotbot italic">Tokyo</div>
+            <a id="StAugustine" href="#"><img class="expresspic darken" src="/images/staugustine1.jpg"></a>
+            <div class="expbig flotbot italic">St Augustine</div>
           </div>
         <div class="expressright">
           <div class="expbig">7 Days</div><br>
@@ -66,8 +79,8 @@
       <td class="tilt">
         <div class="sixth">
           <div>
-            <a id="Rio" href="#"><img class="expresspic darken" src="/images/rio1.jpg"></a>
-            <div class="expbig flotbot italic">Rio</div>
+            <a id="MyrtleBeach" href="#"><img class="expresspic darken" src="/images/myrtlebeach1.jpg"></a>
+            <div class="expbig flotbot italic">Myrtle Beach</div>
           </div>
         <div class="expressright">
           <div class="expbig">7 Days</div><br>
@@ -100,7 +113,7 @@
         <br>
         <h4><div id="vacalocation"></div></h4>
         <h5>7 Days - One Bedroom Condo</h5>
-        <img class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
+        <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
         <div id="rotating-item-wrapper" class="qpolfix">
          <img id="planpic1" class="rotating-item Q-pol" src="images/ireland/p1.jpg"/>
          <img id="planpic2" class="rotating-item Q-pol" src="images/ireland/p2.jpg"/>
@@ -110,7 +123,7 @@
         </div>
       </div>
 
-      <div id="reviewexpress" class"reviewowner">
+      <div id="reviewexpressa" class"reviewowner darken">
         <table>
           <tr>
             <td class="blacktext expresssmall expressheight">Processing Fee: </td>
@@ -118,43 +131,53 @@
           </tr>
           <tr>
             <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
-            <td class="blacktext expresssmall expressheight">$199</td>
+            <td class="blacktext expresssmall expressheight expressheight">$199</td>
           </tr>
         </table>
         <div style="width: 100%;">
           <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
         </div>
-      <div class="centertext">
+      <div class="centertext" style="margin-top: 10px;">
         <span class="blackmoney expresstext expressheight">Total: </span>
         <span class="orangemoney expresstext expressheight">$388</span><br><br><br>
       </div>
       <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
     </div>
 
-
-          <div id="reviewexpress" class"reviewowner">
-            <table>
-              <tr>
-                <td class="blacktext expresssmall expressheight">Processing Fee: </td>
-                <td class="blacktext expresssmall expressheight">$189</td>
-              </tr>
-              <tr>
-                <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
-                <td><img class="starpowa" src="/images/fullstar.jpg"></td>
-              </tr>
-            </table>
-            <div style="width: 100%;">
-              <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
-            </div>
-          <div class="centertext">
-            <span class="blackmoney expresstext expressheight">Total: </span>
-            <span class="orangemoney expresstext expressheight">$189 + </span>
-            <img class="starpowa" src="/images/fullstar.jpg"><br><br><br>
-          </div>
-          <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
-        </div>
-
+    <div id="reviewexpressb" class"reviewowner darken">
+      <table>
+        <tr>
+          <td class="blacktext expresssmall expressheight">Processing Fee: </td>
+          <td class="blacktext expresssmall expressheight">$189</td>
+        </tr>
+        <tr>
+          <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
+          <td><img class="starpowa" src="/images/fullstar.jpg"></td>
+        </tr>
+      </table>
+      <div style="width: 100%;">
+        <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+      </div>
+    <div class="centertext">
+      <span class="blackmoney expresstext expressheight">Total: </span>
+      <span class="orangemoney expresstext expressheight">$189 + </span>
+      <img class="starpowa" src="/images/fullstar.jpg"><br><br><br>
+    </div>
+    <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
   </div>
+  </div>
+
+  <div id="reviewcongrats" class="deadClass">
+    <h6>Enjoy <span id="congratsloca"></span>!</h6>
+    <br>
+    <h3>You just planned a vacation in <span id="congratslocb"></span> accommodations for</h3>
+    <br><br>
+    <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
+    <br>
+    <h4><div id="mostars">You still have STARS! Go ahead, book another Expressway Week!</div></h4>
+    <div id="booknew"><br>Book Another<br>Express Week!</div>
+  </div>
+
 </div>
 </div>
 
