working star credit page with page memory

--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -1,7 +1,20 @@
   <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
+
     <h1>Star Credits</h1>
+    <div id="starloc">
+      <div class="starremaining"><h3>Stars Remaining </h3></div>
+      <div class="starright">
+        <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
+        <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
+        <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
+        <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
+        <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
+        <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
+      </div>
+    </div>
+
     <table id="destinationchoice" class="planning">
       <tr>
         <td class="tilt">
@@ -9,8 +22,8 @@
             <a id="Ireland" href="#"><img class="planpic darken" src="/images/ireland1.jpg"></a>
         </td>
         <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidpr.jpg">
-            <div id="PR"><img class="planpic darken" src="/images/pr1.jpg"></div>
+            <img class="planlink shadow" src="/images/polaroidorlando.jpg">
+            <div id="Orlando"><img class="planpic darken" src="/images/orlando1.jpg"></div>
         </td>
         <td class="tilt">
             <img class="planlink shadow" src="/images/polaroidfiji.jpg">
@@ -23,20 +36,20 @@
       </tr>
       <tr>
         <td class="tilt">
-          <img class="planlink shadow" src="/images/polaroidTokyo.jpg">
-          <a href="Questionnare?loc=tokyo&"><img class="planpic darken" src="/images/tokyo1.jpg"></a>
+            <img class="planlink shadow" src="/images/polaroiditaly.jpg">
+            <a id="Italy" href="#"><img class="planpic darken" src="/images/italy1.jpg"></a>
         </td>
         <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidItaly.jpg">
-            <a href="Questionnare?loc=italy&"><img class="planpic darken" src="/images/italy1.jpg"></a>
+            <img class="planlink shadow" src="/images/polaroiddaytona.jpg">
+            <div id="Daytona"><img class="planpic darken" src="/images/daytona1.jpg"></div>
         </td>
         <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidRio.jpg">
-            <a href="Questionnare?loc=rio&"><img class="planpic darken" src="/images/rio1.jpg"></a>
+            <img class="planlink shadow" src="/images/polaroidMyrtleBeach.jpg">
+            <div id="MyrtleBeach"><img class="planpic darken" src="/images/MyrtleBeach1.jpg"></div>
         </td>
         <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidSydney.jpg">
-            <a href="Questionnare?loc=sydney&"><img class="planpic darken" src="/images/sydney1.jpg"></a>
+            <img class="planlink shadow" src="/images/polaroidstaugustine.jpg">
+            <div id="StAugustine"><img class="planpic darken" src="/images/staugustine1.jpg"></div>
         </td>
       </tr>
     </table>
@@ -47,7 +60,7 @@
           <br>
           <h4><div id="vacalocation"></div></h4>
           <h5>7 Days - One Bedroom Condo</h5>
-          <img class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
+          <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
           <div id="rotating-item-wrapper" class="qpolfix">
            <img id="planpic1" class="rotating-item Q-pol" src="images/ireland/p1.jpg"/>
            <img id="planpic2" class="rotating-item Q-pol" src="images/ireland/p2.jpg"/>
@@ -103,8 +116,19 @@
           <h4>Book Vacation!</h4>
         </div>
       </div>
-
     </div>
+
+    <div id="reviewcongrats" class="deadClass">
+      <h6>Enjoy <span id="congratsloca"></span>!</h6>
+      <br>
+      <h3>By Using <span id="moztars"></span> STARS, you just planned a 7 day vacation in <span id="congratslocb"></span> for</h3>
+      <br><br>
+      <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
+      <br>
+      <h4><div id="mostars">You still have STARS! Go ahead, book another Expressway Week!</div></h4>
+      <div id="booknew"><br>Book Another<br>Express Week!</div>
+    </div>
+
   </div>
 </div>
 
