--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -705,6 +705,10 @@
             transition: all 0.5s ease;
   }
 
+  .Supercalafrag {
+    
+  }
+
   .tilt {
     -webkit-transition: all 0.5s ease;
        -moz-transition: all 0.5s ease;
