Adds an alpha testing ribbon

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -48,6 +48,9 @@
   <body>
     <div id="divSurveyScreen">
       <a href="/SurveyHome" id="lnkHomeIcon"><img class="darken shadow homeicon" src="/images/home.jpg" id="homeIcon"></a>
+
+      <div class="corner-ribbon top-right sticky red">Alpha Testing</div>
+
       <%- body %>
       <div class="pic-wrapper" style="z-index:-1;">
   		  <figure class="pic-1"></figure>
@@ -86,7 +89,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
