--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -105,10 +105,26 @@
     margin: auto;
     position: absolute;
     width: auto;
+    max-height: 648px;
+    max-width: 980px;
     left:0;
     right: 0;
     top: 0;
     bottom: 0;
+    overflow: auto;
+  }
+
+  #divExpressWeek {
+    display: inline-block !important;
+    margin: auto;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left:0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    overflow: auto;
   }
 
   #divWelcomeText {
