--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -1,184 +1,184 @@
 <div class="homepage">
-<div class="center-frame">
-  <div class="semi-transparent-background"></div>
-
-  <h1>ExpressWay Weeks</h1>
-  <div id="starloc">
-    <div class="starremaining"><h3>Stars Remaining </h3></div>
-    <div class="starright">
-      <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
-      <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
-      <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
-      <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
-      <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
-      <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
-    </div>
-  </div>
-
-  <table id="destinationchoice" class="express">
-    <tr>
-      <td class="tilt">
-        <div class="sixth">
-          <div>
-            <a id="Ireland" href="#"><img class="expresspic darken" src="/images/ireland1.jpg"></a>
-            <div class="expbig flotbot italic">Ireland</div>
-          </div>
-        <div class="expressright">
-          <div class="expbig">7 Days</div><br>
-          <div class="expbig">2 Bedroom</div><br>
-          <div id="date1" class="expmed"></div><br>
-          <div class="expmed">Available Units (3)</div>
-        </div>
-      </div>
-      </td>
-      <td class="tilt">
-        <div>
-          <div class="sixth">
-            <div>
-              <a id="Orlando" href="#"><img class="expresspic darken" src="/images/orlando1.jpg"></a>
-              <div class="expbig flotbot italic">Orlando</div>
-            </div>
-        <div class="expressright">
-          <div class="expbig">7 Days</div><br>
-          <div class="expbig">2 Bedroom</div><br>
-          <div id="date2" class="expmed"></div><br>
-          <div class="expmed">Available Units (2)</div>
-        </div>
-        </div>
-      </td>
-      <td class="tilt">
-        <div class="sixth">
-          <div>
-            <a id="Fiji" href="#"><img class="expresspic darken" src="/images/fiji1.jpg"></a>
-            <div class="expbig flotbot italic">Fiji</div>
-          </div>
-        <div class="expressright">
-          <div class="expbig">7 Days</div><br>
-          <div class="expbig">1 Bedroom</div><br>
-          <div id="date3" class="expmed"></div><br>
-          <div class="expmed">Available Units (2)</div>
-        </div>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td class="tilt">
-        <div class="sixth">
-          <div>
-            <a id="StAugustine" href="#"><img class="expresspic darken" src="/images/staugustine1.jpg"></a>
-            <div class="expbig flotbot italic">St Augustine</div>
-          </div>
-        <div class="expressright">
-          <div class="expbig">7 Days</div><br>
-          <div class="expbig">3 Bedroom</div><br>
-          <div id="date4" class="expmed"></div><br>
-          <div class="expmed">Available Units (1)</div>
-        </div>
-      </div>
-      </td>
-      <td class="tilt">
-        <div class="sixth">
-          <div>
-            <a id="MyrtleBeach" href="#"><img class="expresspic darken" src="/images/myrtlebeach1.jpg"></a>
-            <div class="expbig flotbot italic">Myrtle Beach</div>
-          </div>
-        <div class="expressright">
-          <div class="expbig">7 Days</div><br>
-          <div class="expbig">1 Bedroom</div><br>
-          <div id="date5" class="expmed"></div><br>
-          <div class="expmed">Available Units (3)</div>
-        </div>
-        </div>
-      </td>
-      <td class="tilt">
-        <div class="sixth">
-          <div>
-            <a id="Italy" href="#"><img class="expresspic darken" src="/images/italy1.jpg"></a>
-            <div class="expbig flotbot italic">Italy</div>
-          </div>
-        <div class="expressright">
-          <div class="expbig">7 Days</div><br>
-          <div class="expbig">1 Bedroom</div><br>
-          <div id="date6" class="expmed"></div><br>
-          <div class="expmed">Available Units (4)</div>
-          </div>
-        </div>
-      </td>
-    </tr>
-  </table>
-
-    <div id="reviewbox">
-      <div id="reviewpic">
-        <h3>Vacation</h3>
-        <br>
-        <h4><div id="vacalocation"></div></h4>
-        <h5>7 Days - One Bedroom Condo</h5>
-        <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
-        <div id="rotating-item-wrapper" class="qpolfix">
-         <img id="planpic1" class="rotating-item Q-pol" src="images/ireland1.jpg"/>
-         <img id="planpic2" class="rotating-item Q-pol" src="images/ireland2.jpg"/>
-         <img id="planpic3" class="rotating-item Q-pol" src="images/ireland3.jpg"/>
-         <img id="planpic4" class="rotating-item Q-pol" src="images/ireland4.jpg"/>
-         <img id="planpic5" class="rotating-item Q-pol" src="images/ireland5.jpg"/>
+  <div class="center-frame">
+    <div class="semi-transparent-background"></div>
+    <div id="divExpressWeek">
+      <h1>ExpressWay Weeks</h1>
+      <div id="starloc">
+        <div class="starremaining"><h3>Stars Remaining </h3></div>
+        <div class="starright">
+          <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
         </div>
       </div>
 
-      <div id="reviewexpressa" class"reviewowner darken">
-        <table>
-          <tr>
-            <td class="blacktext expresssmall expressheight">Processing Fee: </td>
-            <td class="blacktext expresssmall expressheight">$189</td>
-          </tr>
-          <tr>
-            <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
-            <td class="blacktext expresssmall expressheight expressheight">$199</td>
-          </tr>
-        </table>
-        <div style="width: 100%;">
-          <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
-        </div>
-      <div class="centertext" style="margin-top: 10px;">
-        <span class="blackmoney expresstext expressheight">Total: </span>
-        <span class="orangemoney expresstext expressheight">$388</span><br><br><br>
-      </div>
-      <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
-    </div>
-
-    <div id="reviewexpressb" class"reviewowner darken">
-      <table>
+      <table id="destinationchoice" class="express">
         <tr>
-          <td class="blacktext expresssmall expressheight">Processing Fee: </td>
-          <td class="blacktext expresssmall expressheight">$189</td>
+          <td class="tilt">
+            <div class="sixth">
+              <div>
+                <a id="Ireland" href="#"><img class="expresspic darken" src="/images/ireland1.jpg"></a>
+                <div class="expbig flotbot italic">Ireland</div>
+              </div>
+            <div class="expressright">
+              <div class="expbig">7 Days</div><br>
+              <div class="expbig">2 Bedroom</div><br>
+              <div id="date1" class="expmed"></div><br>
+              <div class="expmed">Available Units (3)</div>
+            </div>
+          </div>
+          </td>
+          <td class="tilt">
+            <div>
+              <div class="sixth">
+                <div>
+                  <a id="Orlando" href="#"><img class="expresspic darken" src="/images/orlando1.jpg"></a>
+                  <div class="expbig flotbot italic">Orlando</div>
+                </div>
+            <div class="expressright">
+              <div class="expbig">7 Days</div><br>
+              <div class="expbig">2 Bedroom</div><br>
+              <div id="date2" class="expmed"></div><br>
+              <div class="expmed">Available Units (2)</div>
+            </div>
+            </div>
+          </td>
+          <td class="tilt">
+            <div class="sixth">
+              <div>
+                <a id="Fiji" href="#"><img class="expresspic darken" src="/images/fiji1.jpg"></a>
+                <div class="expbig flotbot italic">Fiji</div>
+              </div>
+            <div class="expressright">
+              <div class="expbig">7 Days</div><br>
+              <div class="expbig">1 Bedroom</div><br>
+              <div id="date3" class="expmed"></div><br>
+              <div class="expmed">Available Units (2)</div>
+            </div>
+            </div>
+          </td>
         </tr>
         <tr>
-          <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
-          <td><img class="starpowa" src="/images/fullstar.jpg"></td>
+          <td class="tilt">
+            <div class="sixth">
+              <div>
+                <a id="StAugustine" href="#"><img class="expresspic darken" src="/images/staugustine1.jpg"></a>
+                <div class="expbig flotbot italic">St Augustine</div>
+              </div>
+            <div class="expressright">
+              <div class="expbig">7 Days</div><br>
+              <div class="expbig">3 Bedroom</div><br>
+              <div id="date4" class="expmed"></div><br>
+              <div class="expmed">Available Units (1)</div>
+            </div>
+          </div>
+          </td>
+          <td class="tilt">
+            <div class="sixth">
+              <div>
+                <a id="MyrtleBeach" href="#"><img class="expresspic darken" src="/images/myrtlebeach1.jpg"></a>
+                <div class="expbig flotbot italic">Myrtle Beach</div>
+              </div>
+            <div class="expressright">
+              <div class="expbig">7 Days</div><br>
+              <div class="expbig">1 Bedroom</div><br>
+              <div id="date5" class="expmed"></div><br>
+              <div class="expmed">Available Units (3)</div>
+            </div>
+            </div>
+          </td>
+          <td class="tilt">
+            <div class="sixth">
+              <div>
+                <a id="Italy" href="#"><img class="expresspic darken" src="/images/italy1.jpg"></a>
+                <div class="expbig flotbot italic">Italy</div>
+              </div>
+            <div class="expressright">
+              <div class="expbig">7 Days</div><br>
+              <div class="expbig">1 Bedroom</div><br>
+              <div id="date6" class="expmed"></div><br>
+              <div class="expmed">Available Units (4)</div>
+              </div>
+            </div>
+          </td>
         </tr>
       </table>
-      <div style="width: 100%;">
-        <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+
+        <div id="reviewbox">
+          <div id="reviewpic">
+            <h3>Vacation</h3>
+            <br>
+            <h4><div id="vacalocation"></div></h4>
+            <h5>7 Days - One Bedroom Condo</h5>
+            <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
+            <div id="rotating-item-wrapper" class="qpolfix">
+             <img id="planpic1" class="rotating-item Q-pol" src="images/ireland1.jpg"/>
+             <img id="planpic2" class="rotating-item Q-pol" src="images/ireland2.jpg"/>
+             <img id="planpic3" class="rotating-item Q-pol" src="images/ireland3.jpg"/>
+             <img id="planpic4" class="rotating-item Q-pol" src="images/ireland4.jpg"/>
+             <img id="planpic5" class="rotating-item Q-pol" src="images/ireland5.jpg"/>
+            </div>
+          </div>
+
+          <div id="reviewexpressa" class"reviewowner darken">
+            <table>
+              <tr>
+                <td class="blacktext expresssmall expressheight">Processing Fee: </td>
+                <td class="blacktext expresssmall expressheight">$189</td>
+              </tr>
+              <tr>
+                <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
+                <td class="blacktext expresssmall expressheight expressheight">$199</td>
+              </tr>
+            </table>
+            <div style="width: 100%;">
+              <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+            </div>
+          <div class="centertext" style="margin-top: 10px;">
+            <span class="blackmoney expresstext expressheight">Total: </span>
+            <span class="orangemoney expresstext expressheight">$388</span><br><br><br>
+          </div>
+          <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
+        </div>
+
+        <div id="reviewexpressb" class"reviewowner darken">
+          <table>
+            <tr>
+              <td class="blacktext expresssmall expressheight">Processing Fee: </td>
+              <td class="blacktext expresssmall expressheight">$189</td>
+            </tr>
+            <tr>
+              <td class="blacktext expresssmall expressheight">1,2,3-BedRoom Fee: </td>
+              <td><img class="starpowa" src="/images/fullstar.jpg"></td>
+            </tr>
+          </table>
+          <div style="width: 100%;">
+            <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+          </div>
+        <div class="centertext">
+          <span class="blackmoney expresstext expressheight">Total: </span>
+          <span class="orangemoney expresstext expressheight">$189 + </span>
+          <img class="starpowa" src="/images/fullstar.jpg"><br><br><br>
+        </div>
+        <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
       </div>
-    <div class="centertext">
-      <span class="blackmoney expresstext expressheight">Total: </span>
-      <span class="orangemoney expresstext expressheight">$189 + </span>
-      <img class="starpowa" src="/images/fullstar.jpg"><br><br><br>
+      </div>
+
+      <div id="reviewcongrats" class="deadClass">
+        <h6>Enjoy <span id="congratsloca"></span>!</h6>
+        <br>
+        <h3>You just planned a vacation in <span id="congratslocb"></span> accommodations for</h3>
+        <br><br>
+        <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
+        <br>
+        <h4><div id="mostars">You still have STARS! Go ahead, book another Expressway Week!</div></h4>
+        <div id="booknew"><br>Book Another<br>Express Week!</div>
+      </div>
     </div>
-    <div class="blacktext expresssmall expressheight centertext bottomtext">Book Vacation</div>
   </div>
-  </div>
-
-  <div id="reviewcongrats" class="deadClass">
-    <h6>Enjoy <span id="congratsloca"></span>!</h6>
-    <br>
-    <h3>You just planned a vacation in <span id="congratslocb"></span> accommodations for</h3>
-    <br><br>
-    <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
-    <br>
-    <h4><div id="mostars">You still have STARS! Go ahead, book another Expressway Week!</div></h4>
-    <div id="booknew"><br>Book Another<br>Express Week!</div>
-  </div>
-
-</div>
 </div>
 
 <% block('localScripts', '<script src="/page_js/survey.js"></script>') %>
