--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -113,8 +113,8 @@
     bottom: 0;
     overflow: auto;
   }
-
-  #divExpressWeek {
+  
+  .content-pane {
     display: inline-block !important;
     margin: auto;
     position: absolute;
