--- a/views/ExpressWays/index.ejs
+++ b/views/ExpressWays/index.ejs
@@ -1,7 +1,7 @@
 <div class="homepage">
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
-    <div id="divExpressWeek">
+    <div id="divExpressWeek" class="content-pane">
       <h1>ExpressWay Weeks</h1>
       <div id="starloc">
         <div class="starremaining"><h3>Stars Remaining </h3></div>
