--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -2,136 +2,135 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
 
-    <h1>Star Credits</h1>
-    <div id="starloc">
-      <div class="starremaining"><h3>Stars Remaining </h3></div>
-      <div class="starright">
-        <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
-        <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
-        <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
-        <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
-        <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
-        <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
+    <div id="divStarCredits" class="content-pane">
+      <h1>Star Credits</h1>
+      <div id="starloc">
+        <div class="starremaining"><h3>Stars Remaining </h3></div>
+        <div class="starright">
+          <img id="starz1" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz2" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz3" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz4" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz5" class="starpowa" src="/images/fullstar.jpg">
+          <img id="starz6" class="starpowa" src="/images/fullstar.jpg">
+        </div>
       </div>
-    </div>
 
-    <table id="destinationchoice" class="planning">
-      <tr>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidireland.jpg">
-            <a id="Ireland" href="#"><img class="planpic darken" src="/images/ireland1.jpg"></a>
-        </td>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidorlando.jpg">
-            <div id="Orlando"><img class="planpic darken" src="/images/orlando1.jpg"></div>
-        </td>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidfiji.jpg">
-            <div id="Fiji"><img class="planpic darken" src="/images/fiji1.jpg"></div>
-        </td>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidhawaii.jpg">
-            <div id="Hawaii"><img class="planpic darken" src="/images/hawaii1.jpg"></div>
-        </td>
-      </tr>
-      <tr>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroiditaly.jpg">
-            <a id="Italy" href="#"><img class="planpic darken" src="/images/italy1.jpg"></a>
-        </td>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroiddaytona.jpg">
-            <div id="Daytona"><img class="planpic darken" src="/images/daytona1.jpg"></div>
-        </td>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidMyrtleBeach.jpg">
-            <div id="MyrtleBeach"><img class="planpic darken" src="/images/MyrtleBeach1.jpg"></div>
-        </td>
-        <td class="tilt">
-            <img class="planlink shadow" src="/images/polaroidstaugustine.jpg">
-            <div id="StAugustine"><img class="planpic darken" src="/images/staugustine1.jpg"></div>
-        </td>
-      </tr>
-    </table>
+      <table id="destinationchoice" class="planning">
+        <tr>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroidireland.jpg">
+              <a id="Ireland" href="#"><img class="planpic darken" src="/images/ireland1.jpg"></a>
+          </td>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroidorlando.jpg">
+              <div id="Orlando"><img class="planpic darken" src="/images/orlando1.jpg"></div>
+          </td>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroidfiji.jpg">
+              <div id="Fiji"><img class="planpic darken" src="/images/fiji1.jpg"></div>
+          </td>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroidhawaii.jpg">
+              <div id="Hawaii"><img class="planpic darken" src="/images/hawaii1.jpg"></div>
+          </td>
+        </tr>
+        <tr>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroiditaly.jpg">
+              <a id="Italy" href="#"><img class="planpic darken" src="/images/italy1.jpg"></a>
+          </td>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroiddaytona.jpg">
+              <div id="Daytona"><img class="planpic darken" src="/images/daytona1.jpg"></div>
+          </td>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroidmyrtlebeach.jpg">
+              <div id="MyrtleBeach"><img class="planpic darken" src="/images/myrtlebeach1.jpg"></div>
+          </td>
+          <td class="tilt">
+              <img class="planlink shadow" src="/images/polaroidstaugustine.jpg">
+              <div id="StAugustine"><img class="planpic darken" src="/images/staugustine1.jpg"></div>
+          </td>
+        </tr>
+      </table>
 
-      <div id="reviewbox">
-        <div id="reviewpic">
-          <h3>Vacation</h3>
-          <br>
-          <h4><div id="vacalocation"></div></h4>
-          <h5>7 Days - One Bedroom Condo</h5>
-          <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
-          <div id="rotating-item-wrapper" class="qpolfix">
-           <img id="planpic1" class="rotating-item Q-pol" src="images/ireland/p1.jpg"/>
-           <img id="planpic2" class="rotating-item Q-pol" src="images/ireland/p2.jpg"/>
-           <img id="planpic3" class="rotating-item Q-pol" src="images/ireland/p3.jpg"/>
-           <img id="planpic4" class="rotating-item Q-pol" src="images/ireland/p4.jpg"/>
-           <img id="planpic5" class="rotating-item Q-pol" src="images/ireland/p5.jpg"/>
+        <div id="reviewbox">
+          <div id="reviewpic">
+            <h3>Vacation</h3>
+            <br>
+            <h4><div id="vacalocation"></div></h4>
+            <h5>7 Days - One Bedroom Condo</h5>
+            <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
+            <div id="rotating-item-wrapper" class="qpolfix">
+             <img id="planpic1" class="rotating-item Q-pol" src="/images/ireland1.jpg"/>
+             <img id="planpic2" class="rotating-item Q-pol" src="/images/ireland2.jpg"/>
+             <img id="planpic3" class="rotating-item Q-pol" src="/images/ireland3.jpg"/>
+             <img id="planpic4" class="rotating-item Q-pol" src="/images/ireland4.jpg"/>
+             <img id="planpic5" class="rotating-item Q-pol" src="/images/ireland5.jpg"/>
+            </div>
+          </div>
+
+        <div id="reviewspecs" class"reviewowner">
+          <h3>Credits & Fees</h3>
+          <table>
+            <tr>
+              <td class="blacktext largetext">Processing Fee</td>
+              <td class="blacktext largetext">$189 +</td>
+              <td></td>
+              <td><img class="starpowa" src="/images/fullstar.jpg"></td>
+            </tr>
+            <tr>
+              <td class="orangemoney largetext">Non Continental Fee</td>
+              <td class="orangemoney largetext">$275 =</td>
+              <td></td>
+              <td><img id="star2" class="starpowa" src="/images/emptystar.jpg"></td>
+            </tr>
+            <tr>
+              <td class="orangemoney largetext">2-Bedroom Upgrade</td>
+              <td class="orangemoney largetext">$189 =</td>
+              <td></td>
+              <td><img id="star3" class="starpowa" src="/images/emptystar.jpg"></td>
+            </tr>
+            <tr>
+              <td class="orangemoney largetext">3-Bedroom Upgrade</td>
+              <td class="orangemoney largetext">$378 =</td>
+              <td><img id="star4" class="starpowa" src="/images/emptystar.jpg"></td>
+              <td><img id="star5" class="starpowa" src="/images/emptystar.jpg"></td>
+            </tr>
+            <tr>
+              <td class="orangemoney largetext">Peak Season Upgrade</td>
+              <td class="orangemoney largetext">$275 =</td>
+              <td></td>
+              <td><img id="star6" class="starpowa" src="/images/emptystar.jpg"></td>
+              <div id="startotals">$189 + 1 Star</div>
+            </tr>
+          </table>
+          <div style="width: 100%;">
+            <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
+          </div>
+          <div id="startotals" class="orangemoney largetext"></div>
+      </div>
+        <div id="reviewbook">
+          <div class="bookington">
+            <img class="bookimage" src="/images/baggage.jpg"></img>
+            <h4>Book Vacation!</h4>
           </div>
         </div>
+      </div>
 
-      <div id="reviewspecs" class"reviewowner">
-        <h3>Credits & Fees</h3>
-        <table>
-          <tr>
-            <td class="blacktext largetext">Processing Fee</td>
-            <td class="blacktext largetext">$189 +</td>
-            <td></td>
-            <td><img class="starpowa" src="/images/fullstar.jpg"></td>
-          </tr>
-          <tr>
-            <td class="orangemoney largetext">Non Continental Fee</td>
-            <td class="orangemoney largetext">$275 =</td>
-            <td></td>
-            <td><img id="star2" class="starpowa" src="/images/emptystar.jpg"></td>
-          </tr>
-          <tr>
-            <td class="orangemoney largetext">2-Bedroom Upgrade</td>
-            <td class="orangemoney largetext">$189 =</td>
-            <td></td>
-            <td><img id="star3" class="starpowa" src="/images/emptystar.jpg"></td>
-          </tr>
-          <tr>
-            <td class="orangemoney largetext">3-Bedroom Upgrade</td>
-            <td class="orangemoney largetext">$378 =</td>
-            <td><img id="star4" class="starpowa" src="/images/emptystar.jpg"></td>
-            <td><img id="star5" class="starpowa" src="/images/emptystar.jpg"></td>
-          </tr>
-          <tr>
-            <td class="orangemoney largetext">Peak Season Upgrade</td>
-            <td class="orangemoney largetext">$275 =</td>
-            <td></td>
-            <td><img id="star6" class="starpowa" src="/images/emptystar.jpg"></td>
-            <div id="startotals">$189 + 1 Star</div>
-          </tr>
-        </table>
-        <div style="width: 100%;">
-          <td><img style="width: 100%; height: 5px;" src="/images/line.jpg"></td>
-        </div>
-        <div id="startotals" class="orangemoney largetext"></div>
-    </div>
-      <div id="reviewbook">
-        <div class="bookington">
-          <img class="bookimage" src="/images/baggage.jpg"></img>
-          <h4>Book Vacation!</h4>
-        </div>
+      <div id="reviewcongrats" class="deadClass">
+        <h6>Enjoy <span id="congratsloca"></span>!</h6>
+        <br>
+        <h3>By Using <span id="moztars"></span> STARS, you just planned a 7 day vacation in <span id="congratslocb"></span> for</h3>
+        <br><br>
+        <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
+        <br>
+        <h4><div id="mostars">You still have STARS! Go ahead, book another Expressway Week!</div></h4>
+        <div id="booknew"><br>Book Another<br>Express Week!</div>
       </div>
     </div>
-
-    <div id="reviewcongrats" class="deadClass">
-      <h6>Enjoy <span id="congratsloca"></span>!</h6>
-      <br>
-      <h3>By Using <span id="moztars"></span> STARS, you just planned a 7 day vacation in <span id="congratslocb"></span> for</h3>
-      <br><br>
-      <div class="dolladay">$ <span id="congratsprice"></span> per day!</div>
-      <br>
-      <h4><div id="mostars">You still have STARS! Go ahead, book another Expressway Week!</div></h4>
-      <div id="booknew"><br>Book Another<br>Express Week!</div>
-    </div>
-
   </div>
 </div>
 
-<% block('localScripts', '<script src="/page_js/star-explosion.js"></script>') %>
-<% block('localScripts', '<script src="/page_js/fireworks.js"></script>') %>
 <% block('localScripts', '<script src="/page_js/survey.js"></script>') %>
