fixed half of changes

--- a/views/Home/index.ejs
+++ b/views/Home/index.ejs
@@ -2,26 +2,25 @@
   <div class="center-frame">
     <div class="semi-transparent-background"></div>
 
-    <div id="divHomeLinks">
-      <div class="homelink">
-        <a href="/Survey"><img class="subpic darken shadow spin" src="/images/skilodge-small.jpg"></a>
-        <div class="hiddentext">Vacation Calculator</div>
+      <div class="divHomeLinks">
+        <a href="/Survey"><div class="darken shadow spin"><img src="/images/skilodge.jpg"></div></a>
+        <span class="hiddentext">Vacation Calculator</span>
       </div>
 
-      <div class="homelink">
-        <a href="/Planning"><img class="subpic darken shadow spin" src="/images/luau-small.jpg"></a>
-        <div class="hiddentext">Star Credits</div>
+      <div class="divHomeLinks">
+        <a href="/Planning"><div class="darken shadow spin"><img src="/images/luau.jpg"></div></a>
+        <span class="hiddentext">Star Credits</span>
       </div>
 
-      <div class="homelink">
-        <a href="/Owner"><img class="subpic darken shadow spin" src="/images/yurts-small.jpg"></a>
-        <div class="hiddentext">Owner Calculator</div>
+      <div class="divHomeLinks">
+        <a href="/Owner"><div class="darken shadow spin"><img src="/images/yurts.jpg"></div></a>
+        <span class="hiddentext">Owner Calculator</span>
       </div>
 
-      <div class="homelink">
-        <a href="/ExpressWays"><img class="subpic darken shadow spin" src="/images/london-small.jpg"></a>
-        <div class="hiddentext">Expressway Weeks</div>
+      <div class="divHomeLinks">
+        <a href="/ExpressWays"><div class="darken shadow spin"><img src="/images/london.jpg"></div></a>
+        <span class="hiddentext">Expressway Weeks</span>
       </div>
-    </div>
+
   </div>
 </div>
