--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -73,11 +73,30 @@
 .corner-ribbon.orange{background: #e82;}
 .corner-ribbon.yellow{background: #ec0;}
 
-  .homelink {
-    padding: 15px 20px 15px 20px;
+  .divHomeLinks {
     float:left;
-    text-align: center;
     opacity: 0.7;
+    width: 44%;
+    height: 39%;
+    margin: 3%;
+    display: inline-block !important;
+  }
+
+  .divHomeLinks div {
+    overflow: hidden;
+    height: 100%;
+    border-radius: 20px;
+  }
+
+  .divHomeLinks img {
+    width: 100%;
+    display: block;
+    object-fit: contain;
+    border-radius: 20px;
+  }
+
+  .homepics {
+    text-align: center;
   }
 
   .center-frame {
@@ -89,7 +108,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    overflow: hidden;
+    //overflow: hidden;
   }
 
   #lnkHomeIcon {
@@ -100,20 +119,24 @@
     opacity: 0.7;
   }
 
-  #divHomeLinks {
-    display: inline-block !important;
-    margin: auto;
-    position: absolute;
-    width: auto;
-    max-height: 648px;
-    max-width: 980px;
-    left:0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    overflow: auto;
-  }
-  
+  // #divHomeLinks {
+  //   display: inline-block !important;
+  //   margin: auto;
+  //   position: absolute;
+  //   width: auto;
+  //   left:0;
+  //   right: 0;
+  //   top: 0;
+  //   bottom: 0;
+  //   overflow: auto;
+  // }
+
+  // .homelink img{
+  //   width: 100%;
+  //   height: 100%;
+  //   border-radius: 25px;
+  // }
+
   .content-pane {
     display: inline-block !important;
     margin: auto;
@@ -148,10 +171,14 @@
     -webkit-transform: translateY(-50%) translateX(-50%);
   }
 
+  #divStarCredits {
+    // overflow: hidden;
+  }
+
   h1 {
-    text-align: right;
+    text-align: center;
     font-size: 72px;
-    background: -webkit-linear-gradient(#eee, #333);
+    background: -webkit-linear-gradient(#777777, #ffffff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     width: 100%;
@@ -506,43 +533,64 @@
     padding-top:25px;
   }
 
-  .planpic {
-    float: bottom;
-    height: 210px;
-    width: 240px;
-    border: 1px black solid;
-    margin-left: -262px;
-    margin-top: 15px;
+  #destinationchoice {
+    display: inline-block !important;
+    width: 100%;
+    overflow: hidden;
   }
 
+  #ione {
+    background: #ffffff url("/images/polaroidireland.jpg") no-repeat right top;
+    background-size: contain;
+  }
+
+  #oone {
+    background: #ffffff url("/images/polaroidorlando.jpg") no-repeat right top;
+    background-size: contain;
+  }
+
+  #hone {
+    background: #ffffff url("/images/polaroidhawaii.jpg") no-repeat right top;
+    background-size: contain;
+  }
 
   .planlink {
-    margin: 0px 15px 25px 15px;
-    float: left;
-    text-align: center;
-    border: 1px #bbbbbb solid;
-    height: 275px;
-    width: 250px;
     font-style: italic;
+    opacity: 0.7;
+    display: inline-block !important;
+    width: 18%;
+    margin: 0% 7% 2% 7%;
+    display: flex;
   }
 
-  img.subpic {
+  .planlink img {
+    max-height: 100%;
+max-width: 100%;
+  }
+
+  .planpic {
+    margin-top: -40%;
+    width: 50%;
+    height: 60%;
+    border: 3px solid #eeaa77;
+  }
+
+  .planpic img {
+    width: 100%;
+    border: 1px black solid;
+   }
+
+  .subpic {
     /*float: bottom;*/
-    position: relative;
-    height: 250px;
-    width: 450px;
-    border-radius: 175px;
-    -webkit-border-radius: 175px;
-    -moz-border-radius: 175px;
   }
 
-  img.shadow {
+  .shadow {
     box-shadow: 0 0 15px rgba(0, 0, 0, 3);
     -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
     -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 3);
   }
 
-  img.darken:hover {
+  .darken:hover {
     -webkit-filter: brightness(30%);
     filter: brightness(30%);
     -webkit-transition: all 1s ease;
@@ -601,7 +649,9 @@
   }
 
   .thumbpic {
-    border-radius: 50%;
+    border-radius: 25px;
+    height: 15%;
+    width: 25%;
     position: absolute;
     bottom: 70px;
     right: 10px;
@@ -626,9 +676,9 @@
     left: 60%;*/
   }
 
-  .newClass{visibility: hidden}
+  .newClass {visibility: hidden}
 
-  .deadClass{display:none}
+  .deadClass {display:none}
 
   .permhidden {visibility: hidden}
 
@@ -663,6 +713,8 @@
     font-weight: bold;
     font-style: italic;
     text-shadow: 2px 2px #000000;
+    margin: auto;
+    float: bottom;
   }
 
   .surveytext{
