--- a/views/Planning/index.ejs
+++ b/views/Planning/index.ejs
@@ -16,44 +16,26 @@
         </div>
       </div>
 
-      <table id="destinationchoice" class="planning">
-        <tr>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroidireland.jpg">
-              <a id="Ireland" href="#"><img class="planpic darken" src="/images/ireland1.jpg"></a>
-          </td>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroidorlando.jpg">
-              <div id="Orlando"><img class="planpic darken" src="/images/orlando1.jpg"></div>
-          </td>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroidfiji.jpg">
-              <div id="Fiji"><img class="planpic darken" src="/images/fiji1.jpg"></div>
-          </td>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroidhawaii.jpg">
-              <div id="Hawaii"><img class="planpic darken" src="/images/hawaii1.jpg"></div>
-          </td>
-        </tr>
-        <tr>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroiditaly.jpg">
-              <a id="Italy" href="#"><img class="planpic darken" src="/images/italy1.jpg"></a>
-          </td>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroiddaytona.jpg">
-              <div id="Daytona"><img class="planpic darken" src="/images/daytona1.jpg"></div>
-          </td>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroidmyrtlebeach.jpg">
-              <div id="MyrtleBeach"><img class="planpic darken" src="/images/myrtlebeach1.jpg"></div>
-          </td>
-          <td class="tilt">
-              <img class="planlink shadow" src="/images/polaroidstaugustine.jpg">
-              <div id="StAugustine"><img class="planpic darken" src="/images/staugustine1.jpg"></div>
-          </td>
-        </tr>
-      </table>
+      <div id="destinationchoice" class="planning">
+          <div class="planlink tilt">
+            <a id="Ireland" href="#"><img class="darken" src="/images/polaroidireland1.jpg"></a>
+          </div>
+          <div class="planlink tilt">
+            <a id="Orlando" href="#"><img class="darken" src="/images/polaroidorlando1.jpg"></a>
+          </div>
+          <div class="planlink tilt">
+            <a id="Fiji" href="#"><img class="darken" src="/images/polaroidfiji1.jpg"></a>
+          </div>
+          <div class="planlink tilt">
+            <a id="Italy" href="#"><img class="darken" src="/images/polaroiditaly1.jpg"></a>
+          </div>
+          <div class="planlink tilt">
+            <a id="Daytona" href="#"><img class="darken" src="/images/polaroiddaytona1.jpg"></a>
+          </div>
+          <div class="planlink tilt">
+            <a id="MyrtleBeach" href="#"><img class="darken" src="/images/polaroidmyrtlebeach1.jpg"></a>
+          </div>
+        </div>
 
         <div id="reviewbox">
           <div id="reviewpic">
@@ -61,13 +43,13 @@
             <br>
             <h4><div id="vacalocation"></div></h4>
             <h5>7 Days - One Bedroom Condo</h5>
-            <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg">
+            <!-- <img id="polaroidpic" class="planlink shadow qpolfix" src="/images/polaroidireland.jpg"> -->
             <div id="rotating-item-wrapper" class="qpolfix">
-             <img id="planpic1" class="rotating-item Q-pol" src="/images/ireland1.jpg"/>
-             <img id="planpic2" class="rotating-item Q-pol" src="/images/ireland2.jpg"/>
-             <img id="planpic3" class="rotating-item Q-pol" src="/images/ireland3.jpg"/>
-             <img id="planpic4" class="rotating-item Q-pol" src="/images/ireland4.jpg"/>
-             <img id="planpic5" class="rotating-item Q-pol" src="/images/ireland5.jpg"/>
+             <img id="planpic1" class="rotating-item Q-pol shadow" src="/images/ireland1.jpg"/>
+             <img id="planpic2" class="rotating-item Q-pol shadow" src="/images/ireland2.jpg"/>
+             <img id="planpic3" class="rotating-item Q-pol shadow" src="/images/ireland3.jpg"/>
+             <img id="planpic4" class="rotating-item Q-pol shadow" src="/images/ireland4.jpg"/>
+             <img id="planpic5" class="rotating-item Q-pol shadow" src="/images/ireland5.jpg"/>
             </div>
           </div>
 
