--- a/assets/styles/survey.css.less
+++ b/assets/styles/survey.css.less
@@ -1,6 +1,7 @@
 #divSurveyScreen {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 
   .corner-ribbon{
     width: 200px;
@@ -108,7 +109,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    //overflow: hidden;
+    overflow: hidden;
   }
 
   #lnkHomeIcon {
@@ -826,6 +827,7 @@ max-width: 100%;
     z-index: -1 !important;
     border-radius: 1em;
     opacity: 0.6;
+    overflow: hidden;
   }
 
   .shadowrotate:hover {
