--- a/views/GuestSurvey/index.ejs
+++ b/views/GuestSurvey/index.ejs
@@ -92,22 +92,8 @@
     </div>
 </div>
 
-    <a id="trigger" href="#"><img class="thumbpic darken" src="/images/ThumbsUp.jpg"></a>
-    <table class="surveykeys">
-      <tr>
-        <td><img id="up" class="arrow" src="/images/arrowup.jpg"></td>
-      </tr>
-      <tr>
-        <td>
-          <form>
-            <input id="surveyvalue" step=".5" type="number" value="2"><br>
-          </form>
-        </td>
-      </tr>
-      <tr>
-        <td><img id="down" class="arrow" src="/images/arrowdown.jpg"></td>
-      </tr>
-    </table>
+  <%- partial('../Shared/_display_buttons.ejs') %>
+
   </div>
 </div>
 
